[tool.poetry]
name = "py-temporal-doc"
version = "0.1.0"
description = "Temporal documentation decorator plugin for python"
authors = ["Reecenil Valencia <reecenil.valencia0908@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "py_temporal_doc"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
dependency-injector = "^4.41.0"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
