[project]
name = "py-temporal-doc"
version = "0.0.2"
authors = [
  { name="Reecenil Valencia", email="reecenil.h.valencia@gmail.com" },
]
description = "Temporal documentation decorator plugin for python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/reecenil/py-temporal-doc"
Issues = "https://github.com/reecenil/py-temporal-doc/issues"

[tool.poetry]
name = "py-temporal-doc"
version = "0.0.2"
description = "Temporal documentation decorator plugin for python"
authors = ["Reecenil Valencia <reecenil.h.valencia@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "py_temporal_doc"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
dependency-injector = "^4.41.0"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-temporal-doc = "py_temporal_doc.main:main"
